--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "my-react-calculation-app",
+  "homepage": "https://matveygal.github.io/juma_umfrage_web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^4.2.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
